--- a/css/styles.css
+++ b/css/styles.css
@@ -5,12 +5,39 @@
     --white-color: #FFFFFF;
     --background-grey: #F5F4FA;
     --background-darkgrey: #2F303A;
-    --footer-grey--:rgba(255, 255, 255, 0.6)
-    
-    
+    --footer-grey--:rgba(255, 255, 255, 0.6);
+    --border-line: #ECECEC;
+
     }
     
     /*------------Общие стили элементов-------*/
+    
+    html{
+        box-sizing: border-box;
+    }
+    
+    *, *::before, *::after{
+        box-sizing: inherit;
+    }
+    
+    
+    h1,
+    h2,
+    h3,
+    h4,
+    p,
+    ul,
+    li{
+        margin: 0px;
+        padding: 0px;
+    }
+    
+    img {
+        display: block;
+        max-width: 100%;
+        height: auto;
+    }
+
 
     body{
         font-family: 'Roboto', sans-serif;   
@@ -43,17 +70,30 @@
         cursor: pointer;
         text-align: center;
     }
+
+    .container{
+        margin: 0 auto;
+        width: 1200px;
+        padding-right: 15px;
+        padding-left: 15px;
+        }
+        
+        .section{
+            padding-top: 94px;
+            padding-bottom: 94px;
+        }
+        
     
     /* -------------------------HEADER------------------------- */
-    .header.link{
-        font-family: 'Roboto', sans-serif;
-        font-weight: 500;
-        font-size: 14px;
-        line-height: calc(16/14);
-        letter-spacing: 0.02em;
-        
-        color: var(--main-text-color);
+    .header{
+        border-bottom-width: 1px;
+        border-bottom-style: solid;
+        border-bottom-color: var(--border-line);
     }
+   
+    .header .link{
+        display: block;
+        }
     
     .header.link:hover,
     .header.link:focus {
@@ -61,6 +101,7 @@
     }
     
     .logo-link{
+        display: block;
         font-family: 'Raleway';
         font-weight: 700;
         font-size: 26px;
@@ -84,11 +125,14 @@
         color: var(--second-text-color);
     }
 
-    .logo-link:hover, logo-link:focus, .nav-link:hover, .nav-link:focus, .contact-link:hover, .contact-link:focus {
+    .header .link:hover,
+    .header .link:focus {
         color: var(--accent-color);
     }
-    
-    .nav-list a {
+
+    .nav-list .link {
+        padding-top: 32px;
+    padding-bottom: 32px;
         color: var(--second-text-color);
     }
     
@@ -101,14 +145,53 @@
         color: var(--main-text-color);
     }
 
+    .nav{
+        display: flex;
+        align-items: center;
+    }
+
+    .nav-list>.item:not(:last-child), .contacts-item:not(:last-child){
+        margin-right: 50px;
+        }
+
+        .nav-list, .data{
+            display: flex;
+            margin-left: 93px;
+        }
+
+        .header-container{
+            display: flex;
+            align-items: center;
+        }
+
+        .contacts-item .link{
+            padding-top: 32px;
+            padding-bottom: 32px;
+        }
+        
+        .data{
+            margin-left: auto;
+        }
+
+
     
     /*-----------------------------ORDER------------------------*/
     
     .order{
-        background-color: var(--background-darkgrey);
+        
+ padding-top: 200px;
+        padding-bottom: 200px;
+        
+            background-color: var(--background-darkgrey);
+        text-align: center;
     }
     .main-heading{
-        
+
+        margin-bottom: 30px;
+        margin-left: auto;
+    margin-right: auto;
+    width: 696px;
+
         font-weight: 900;
         font-size: 44px;
         line-height: calc(60/44);
@@ -120,12 +203,19 @@
     }
     
     .main-button{
+        padding: 10px 32px;
+
         font-family: 'Roboto', sans-serif;
         font-style: normal;
         font-weight: 700;
         font-size: 16px;
         line-height: calc(30/16);
         letter-spacing: 0.06em;
+
+
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    border: none;
     }
 
     .main-button:hover, .main-button:focus{
@@ -133,6 +223,13 @@
     }
     
     /*--------------------ADVANTAGES-----------------------*/
+.advantages-items{
+    display: flex;
+}
+
+.advantages .item + .item{
+    margin-left: 30px;
+}
 
     .visually-hidden {
         position: absolute;
@@ -149,6 +246,8 @@
       }
     
     .advantages .third-heading{
+        margin-bottom: 10px;
+
         font-weight: 700;
         font-size: 14px;
         line-height: calc(16/14);
@@ -162,23 +261,71 @@
 }
     
     /*-- -------------------whatdo-----------*/
+    .whatdo{
+        padding-top: 0px;
+    }
     
+    .whatdo .second-heading{
+        margin-bottom: 50px;
+    }
+    
+    .whatdo .list{
+        display: flex;
+        padding: 0;
+        justify-content: space-between;
+    }
+    
+    
+    .whatdo .item + .item{
+        margin-left: 30px;
+    
+    }
+
+
     /*------------------------TEAM--------*/
     
     .team{
         background-color: var(--background-grey);
-        
+         }
+
+    .team .list{
+        display: flex;
+    }
+    .team .second-heading{
+        margin-bottom: 50px;
+    }
+
+    .team .item{
+
+        background-color: var(--white-color);
+        width: 270px;
+        box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
+        0px 1px 1px rgba(0, 0, 0, 0.14),
+        0px 2px 1px rgba(0, 0, 0, 0.2);
+        border-radius: 0px 0px 4px 4px;
+    
+        margin-right: 30px;
     }
     
-    .third-heading{
+    .team .item:nth-child(4n){
+        margin-right: 0px;
+    }
+
+
+    .team .third-heading{
+        margin: 30px 50px 10px;
+        text-align: center;
+
         font-weight: 500;
         font-size: 16px;
         line-height: calc(19/16);
+        text-align: center;
         
         color: var(--second-text-color);
     }
     
     .team .text{
+        margin-bottom: 30px;
         
         font-weight: 400;
         font-size: 16px;
@@ -195,6 +342,17 @@
     /*------------------------------------FOOTER-----------*/
     .footer{
         background-color: var(--background-darkgrey);
+        padding-top: 60px;
+        padding-bottom: 60px;
+    }
+
+
+    .footer .item{
+        padding-bottom: 9px;
+    }
+
+    .footer .item:last-child{
+        margin-bottom: 0;
     }
 
     .footer .link{
@@ -208,6 +366,8 @@
     }
 
     .footer .logo-link{
+margin-bottom: 20px;
+
         color: var(--white-color);
         font-family: 'Raleway';
         font-weight: 700;
@@ -227,19 +387,34 @@
     
     /*-- ---------------EXAMPLES------- -*/
     
-    
+    .examples-list{
+        display: flex;
+        justify-content: center;
+    }
+
+    .examples-item{
+        margin-right: 8px;
+    }
+
+.examples-item:last-child{
+    margin-right: 0px;
+}
+
     .examples .button{
+        padding: 6px 22px;
 
         font-family: 'Roboto', sans-serif;
         font-style: medium;
         letter-spacing: 0.03em;
-
+        text-align: center;
 
         color: var(--second-text-color);
         font-weight: 500;
         font-size: 16px;
         line-height: calc(26/16);
         background-color: var(--background-grey);
+        border: none;
+        border-radius: 4px;
     
     }
     
@@ -249,8 +424,29 @@
     }
     
     /*----------------Карточки с работами-----------*/
+    .cards-list .item{
+        width: 370px;
     
+        margin-right: 30px;
+        margin-bottom: 30px;
+    }
+     
+    .cards-list .item:nth-child(3n + 3) {
+        margin-right: 0px;
+        }
+    
+        .cards-list .item:nth-last-child(-n + 3) {
+            margin-bottom: 0;}
+    
+            .card-info{
+            padding: 24px 20px;
+            border: 1px solid #EEEEEE;
+            }
+   
+   
     .examples .second-heading{
+        margin-bottom: 4px;
+
         font-size: 18px;
         line-height: calc(36/18);
         letter-spacing: 0.06em;
@@ -260,4 +456,17 @@
         font-size: 16px;
         line-height: calc(30/16);
         color: var(--main-text-color);
+    }
+
+    .examples-list{
+        display: flex;
+        justify-content: center;
+        margin-bottom: 50px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    
+    .cards-list{
+        display: flex;
+        flex-wrap: wrap;
     }
